--- a/web.css
+++ b/web.css
@@ -181,7 +181,7 @@ img{
 div.sprite{
  width: 250px;
  height: 250px;
- background-image: url("tr.jpg");
+ background-image: url("tarun.jpg");
  background-size: cover;
  display: block;
  margin-top:100px;
